# FuckTools

./: .gitignore  CMakeLists.txt  README.md
BFCC/: CMakeLists.txt  main.cpp
BFCD/: CMakeLists.txt  main.cpp
FuckCompiler/: CMakeLists.txt  README.md  cistring.hpp  fuckoptimizer.cpp  fuckoptimizer.hpp  fucktranslator.hpp  main.cpp
FuckComponents/: CMakeLists.txt  FuckByteCode.cpp  FuckByteCode.hpp
FuckMachine/: CMakeLists.txt  main.cpp
FuckMachineC/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  hello-noloop.bf  hello.bf  test.bf
